# UbuntuAutoConfigure

./: .gitgnore  README.md  auto-copy.sh  auto_configure.sh  compile-install-kdrobotcpplibs.sh  compile_install.sh  download-google-chrome  download_clion-pycharm.sh  installer-init.sh  installer-python.sh  installer-qt_opencv-depend.sh  installer-typora.sh  time-synchronization.sh
script/: auto_copy.sh  cmake_install_package.sh  color_config.sh  install_Galaxy.sh  install_aarch_qt.sh  install_ceres_solver.sh  install_clion.sh  install_cmake_3.27.sh  install_fmt.sh  install_gflags.sh  install_github_repositories_library.sh  install_glog.sh  install_google_chrome.sh  install_gtest.sh  install_hikcamera_x86.sh  install_kdrobotcpplibs.sh  install_library_from_github.sh  install_matplotlib.sh  install_opencv_package.sh  install_openvino.sh  install_pycharm.sh  install_realsense.sh  install_spdlog.sh  install_yaml_cpp.sh  installer_init.sh  installer_python.sh  installer_qt_opencv_depend.sh  installer_typora.sh  time_synchronization.sh
script/compile/: test.sh  test_kdlib.sh  test_opencv.sh  test_qt.sh  test_realsense2.sh  test_spdlog.sh
script/lib/: install_lib.sh  log.sh
src/: app.py  auto_configure.sh
src/data/: data.py
src/data_parser/: data_parser.py
src/install/: auto_copy.sh  compile_install_kdrobotcpplibs.sh  compile_install_realsense_spdlog.sh  install_clion_pycharm.sh  install_google_chrome.sh  installer_init.sh  installer_python.sh  installer_qt_opencv_depend.sh  installer_typora.sh  time_synchronization.sh
src/parser/: data_parser.py
src/ui/: auto_config_ui.py  checkbutton.py  label.py  pushbutton.py  pwd_entry.py  select_path_widget.py
src/utils/: OpencvProxyRex.py
test/test_all/: CMakeLists.txt
test/test_all/src/: main.cpp
test/test_kdlib/: CMakeLists.txt
test/test_kdlib/src/: main.cpp
test/test_opencv/: CMakeLists.txt
test/test_opencv/src/: main.cpp
test/test_qt/: CMakeLists.txt
test/test_qt/src/: main.cpp
test/test_realsense2/: CMakeLists.txt
test/test_realsense2/src/: main.cpp
test/test_spdlog/: CMakeLists.txt
test/test_spdlog/src/: main.cpp
